# umadev

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml  umadev-governance.yml  website-pages.yml
crates/umadev/: Cargo.toml  build.rs
crates/umadev-agent/: Cargo.toml
crates/umadev-agent/src/: acceptance.rs  adopt.rs  agents.rs  app_runtime.rs  arch_fitness.rs  ask_question.rs  base_error.rs  bg_agents.rs  blocker.rs  checkpoint.rs  coach.rs  color_permission.rs  config.rs  constitution.rs  context.rs  continuous.rs  critics.rs  deploy.rs  design_archetype.rs  design_system.rs  director.rs  director_loop.rs  director_loop_tests.rs  error_kb.rs  events.rs  execution_contract.rs  experts.rs  fact_extract.rs  first_pass.rs  freshness.rs  gates.rs  init_assets.rs  interaction.rs  knowledge_feedback.rs  lessons.rs  lib.rs  materialize.rs  memory_control.rs  open_decisions.rs  phases.rs  (+29 more)
crates/umadev-agent/src/director_loop/: operational_review.rs  quality_evidence.rs  resume.rs  review_checkpoint.rs  step_metrics.rs  step_review.rs
crates/umadev-agent/src/director_loop/tests/: knowledge_feedback_tests.rs  late_contract_tests.rs
crates/umadev-agent/src/knowledge_feedback/: storage.rs
crates/umadev-agent/src/router/: tests.rs
crates/umadev-agent/src/router/git_commit/: literal.rs  mod.rs  natural.rs  quote.rs  scope.rs
crates/umadev-agent/src/run_lock/: fence.rs  namespace.rs  owner.rs
crates/umadev-agent/tests/: workspace_architecture.rs
crates/umadev-governance/: Cargo.toml
crates/umadev-governance/src/: audit.rs  color.rs  compliance.rs  design.rs  lib.rs  policy.rs  redaction.rs  rules.rs  security_context.rs  tokenizer.rs
crates/umadev-governance/src/rules/: content_scan.rs  debug_residue.rs  deep_nesting.rs  file_safety.rs  security_rules.rs  tests.rs  var_declarations.rs
crates/umadev-governance/tests/: security_context_regressions.rs  spec_vectors.rs
crates/umadev-host/: Cargo.toml
crates/umadev-host/src/: acp.rs  claude.rs  claude_session.rs  codex.rs  codex_session.rs  folder_trust.rs  grok_auth_flow.rs  grok_background_control.rs  grok_contract.rs  grok_prompt_queue.rs  grok_routes.rs  kimi_contract.rs  lib.rs  opencode.rs  opencode_session.rs  process_logs.rs  redaction.rs  session_bootstrap.rs  stderr_tail.rs  turn_input.rs
crates/umadev-host/src/acp/: background_control_tests.rs  folder_trust_tests.rs  prompt_queue_tests.rs
crates/umadev-host/tests/: grok_published_contract.rs  grok_source_drift.rs  kimi_published_contract.rs  kimi_source_drift.rs  live_base_contract.rs
crates/umadev-knowledge/: Cargo.toml
crates/umadev-knowledge/src/: chunker.rs  corpus.rs  eval.rs  index.rs  lib.rs  local_embed.rs  prompt_reference.rs  query_expansion.rs  repomap.rs  retrieve.rs  usefulness.rs  vector.rs
crates/umadev-knowledge/tests/: retrieval_quality_gate.rs  vector_hybrid.rs
crates/umadev-process/: Cargo.toml
crates/umadev-process/src/: lib.rs
crates/umadev-state/: Cargo.toml
crates/umadev-state/src/: fs.rs  lib.rs  lifecycle.rs  memory.rs  store_lock.rs
crates/umadev-tui/: Cargo.toml
crates/umadev-tui/src/: app.rs  apple_terminal_theme.rs  auth_ui.rs  background_process_control.rs  base_config.rs  base_session_config.rs  clipboard.rs  config.rs  cross_platform_terminal_tests.rs  director_run.rs  execution_postcondition.rs  execution_postcondition_integration_tests.rs  host_git.rs  interaction_bridge.rs  lib.rs  lib_tests.rs  link.rs  preview.rs  prompt_queue_ui.rs  read_only_gate.rs  resident_host_git.rs  resident_turn_support.rs  route_decision.rs  selection.rs  session_slot.rs  tool_effects.rs  ui.rs  usage_view.rs
crates/umadev-tui/src/app/: backend.rs  host_git.rs  host_input.rs  lessons_view.rs  memory_view.rs  plan_view.rs  read_only_metric.rs  run_pause.rs  submission.rs  task_control.rs  tests.rs  usage_meter.rs
crates/umadev-tui/src/app/tests/: git_host_firewall_tests.rs  tail_interaction_tests.rs
crates/umadev-tui/src/base_config/: tests.rs
crates/umadev-tui/src/execution_postcondition/: common.rs  tests.rs
crates/umadev-tui/src/execution_postcondition/git_commit/: captured_index.rs  command.rs  config_safety.rs  index.rs  mod.rs  plumbing.rs  policy.rs  process.rs  transaction.rs  validation.rs
crates/umadev-tui/src/input/: decode.rs  keymap.rs  mod.rs  reader.rs  tokenize.rs
crates/umadev-tui/src/tests/: resident_chat_terminal_tests.rs
crates/umadev/src/: ci.rs  doctor.rs  hook.rs  knowledge_bundle.rs  knowledge_manager.rs  main.rs  mcp.rs  mcp_manager.rs  self_update.rs  skill_manager.rs
crates/umadev/templates/: examples.txt  guide.txt
crates/umadev/tests/: e2e.rs  git_commit_incident.rs  terminal_pty.rs
docs/: AGENT_TEAM_INTERACTION_DESIGN.md  AGENT_WIELDS_BASE_ARCHITECTURE.md  ARCHITECTURE.md  CHINESE_BASE_CLI_ADAPTATION.md  CONTINUOUS_SESSION_ARCHITECTURE.md  ENTERPRISE_MATURITY_AUDIT_2026-07-14.md  FEATURE_DEEP_DIG_FINDINGS.md  GROK_BUILD_SOURCE_CONTRACT.md  KIMI_CODE_SOURCE_CONTRACT.md  PRODUCT_VISION_AND_ROADMAP.md  TERMINAL_COMPATIBILITY.md  TOP_TIER_DESIGN.md  USER_GUIDE.md
docs/decisions/: OPEN-DECISIONS.md
knowledge/design-systems/: 00-craft-rules.md  01-register.md  anti-ai-slop.md  bold-geometric.md  brutalist-bold.md  design-system-deep-dive.md  editorial-clean.md  glass-aurora.md  modern-minimal.md  premium-luxury.md  product-type-design-map.md  soft-warm.md  tech-utility.md
npm/: README.md
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-musl-arm64/: package.json
npm/cli-linux-musl-x64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-x64/: package.json
npm/knowledge-corpus/: package.json
npm/model-e5-small/: package.json
npm/scripts/: publish-hf-fp16.py  publish-registry.sh  publish-registry.test.cjs  (+8 more)
spec/: UMADEV_HOST_SPEC_V1.md
umadev-website/: next.config.ts  package-lock.json  package.json
(+57 files in other folders)
