[package]
name = "umadev-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UmaDev Agent — the spec-aware orchestrator that drives the 9-phase pipeline."

[dependencies]
umadev-spec = { workspace = true }
umadev-governance = { workspace = true }
umadev-runtime = { workspace = true }
umadev-knowledge = { workspace = true }
umadev-contract = { workspace = true }
umadev-i18n = { workspace = true }
umadev-state = { workspace = true }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
zip = { workspace = true }

# Only for the `setsid(2)` pre-exec seam in `spawn_util` (detaching a spawned
# child from the controlling terminal). Unix-only so no other target pays for it.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
# Enable real HTTP embeddings in the knowledge crate. The binary enables this
# in its own [features] so the shipped binary supports hybrid retrieval; the
# library stays BM25-only by default for downstream embedders who want zero
# network deps.
vector = ["umadev-knowledge/vector"]
# Bundle the local candle embedding model (pure Rust). The release build enables
# this so the shipped binary embeds offline with zero user setup; dev/CI keep it
# off so they don't pay candle's heavy compile.
vector-local = ["umadev-knowledge/vector-local"]

[dev-dependencies]
tempfile = "3"
