[package]
name = "umadev-governance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UmaDev governance kernel — pre-write rules, audit logs, evidence chain."

[dependencies]
umadev-spec = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
umadev-contract = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = "3"
serde = { workspace = true }
serde_json = { workspace = true }
