[package]
name = "umadev-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UmaDev state — safe cross-platform persistence and user-controlled memory policy."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
