[package]
name = "umadev-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UmaDev TUI — a ratatui terminal app that drives the pipeline and renders live progress."

[dependencies]
umadev-agent = { workspace = true }
umadev-host = { workspace = true }
umadev-runtime = { workspace = true }
umadev-spec = { workspace = true }
umadev-i18n = { workspace = true }
umadev-state = { workspace = true }

ratatui = { workspace = true }
ratatui-crossterm = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
# Grapheme-cluster segmentation for the input model: the caret / backspace /
# forward-delete step over whole user-perceived glyphs (ZWJ emoji, flag &
# skin-tone sequences, base+combining marks) instead of splitting them
# mid-codepoint. Already in the tree transitively (ratatui/textwrap pull it),
# so this adds no new compile cost; pure-Rust, no ICU.
unicode-segmentation = "1"
# CommonMark pull parser — a pure-Rust, dependency-light event stream (no ICU,
# no heavy parse tree). We compile the LIBRARY only (`default-features = false`
# drops the `getopts`-backed `pulldown-cmark` binary) and feed its events into a
# ratatui Line/Span compiler. The dependency-light constraint only binds the
# spec / governance / contract crates, not the TUI.
pulldown-cmark = { version = "0.13", default-features = false }
# Pure-Rust line-level text diff for the Write/Edit diff card (P1). Lightweight,
# no transitive ICU/parser trees — fits the pure-Rust / dependency-light bar.
similar = { workspace = true }
# Multi-language code-block syntax highlighter. Pure-Rust, regex-based (the same
# `regex` crate the workspace already compiles for contract/governance/knowledge,
# plus `unicode-width` which the TUI already depends on) — so the NET new tree is
# just `synoptic` + three tiny leaf crates (`char_index`, `if_chain`,
# `nohash-hasher`). Ships built-in grammars for ~25 languages (rust/py/js/ts/go/
# java/c/cpp/cs/ruby/php/json/yaml/toml/sql/bash/html/css/xml/md/…) with real
# string / comment / number / keyword tokenization incl. multi-line constructs —
# a genuine step up from the old ~5-language per-line keyword tinter, at a
# fraction of syntect's footprint (no flate2/bincode/walkdir + embedded dump).
# Its group names map onto our own `SynRole` theme tokens (see `syn_role_for_group`)
# so colors stay in the theme layer, and every call is wrapped fail-open so an
# unknown language or a highlighter fault falls back to the keyword tinter.
# No `unsafe` is forced on us: our crate keeps `#![forbid(unsafe_code)]`.
synoptic = "2"
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Unix-only: the raw SIGCONT signal number for the job-control-resume self-heal
# (R5). Pure-Rust bindings only (not a host SDK), and already in the tree via
# tokio — so this adds no extra compile cost. tokio installs the handler safely,
# so no `unsafe` is introduced.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-only safe wrapper around console input modes. Crossterm already
# depends on this internally; UmaDev uses it directly to keep Ctrl-C delivered
# as input while the TUI owns the console, without introducing unsafe code.
[target.'cfg(windows)'.dependencies]
crossterm_winapi = "0.9"

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
# `test-util` unlocks tokio's PAUSED virtual clock (`start_paused`), so the
# reader's paste-state-aware flush-window tests (Wave 2 P1) assert real timer
# behaviour deterministically — no wall-clock sleeps, no flaky CI. Test builds
# only; the shipped binary's tokio features are unchanged.
tokio = { workspace = true, features = ["test-util"] }
