[package]
name = "umadev"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UmaDev — one spec, one binary, five first-class AI coding CLI backends."

[[bin]]
name = "umadev"
path = "src/main.rs"

[dependencies]
umadev-spec = { workspace = true }
umadev-governance = { workspace = true }
umadev-agent = { workspace = true, features = ["vector"] }
umadev-contract = { workspace = true }
umadev-runtime = { workspace = true }
umadev-host = { workspace = true }
umadev-tui = { workspace = true }
umadev-i18n = { workspace = true }
umadev-state = { workspace = true }

clap = { workspace = true }
include_dir = { workspace = true }
# `umadev update` self-updates a non-package-managed install (cargo install /
# downloaded release asset) straight from the GitHub Releases API. reqwest is
# ALREADY linked into this binary through umadev-host (a non-optional dep there),
# so naming it here adds zero new crates and no second TLS stack — and it beats
# shelling out to curl / Invoke-WebRequest, neither of which is guaranteed present.
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-width = { workspace = true }

[features]
default = []
# Bundle the local candle embedding model into the shipped binary. The release
# CI builds with `--features vector-local` so `npm i -g umadev` gives offline
# hybrid retrieval with zero user setup; dev/CI omit it to skip candle's heavy
# compile. Fail-open: without the model the binary degrades to BM25.
vector-local = ["umadev-agent/vector-local"]

[dev-dependencies]
tempfile = "3"
zip = { workspace = true }
async-trait = { workspace = true }
# Exercise the real binary through the operating system's native pseudo-terminal:
# Unix PTYs on macOS/Linux and ConPTY on Windows. Test-only, so it adds no bytes
# or runtime surface to the shipped `umadev` binary.
portable-pty = "0.9"
